--- a/package.json
+++ b/package.json
@@ -24,15 +24,21 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prisma": "^4.15.0",
 		"sass": "^1.57.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
-		"vitest": "^0.25.3",
-		"houdini": "^1.0.9",
-		"houdini-svelte": "^1.0.9"
+		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
+	"dependencies": {
+		"@prisma/client": "^4.15.0"
+	}
 }
