--- a/package.json
+++ b/package.json
@@ -11,10 +11,25 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test:unit": "vitest",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "format": "prettier --plugin-search-dir . --write .",
+    "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
+    "smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
+    "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
   },
   "devDependencies": {
     "@playwright/test": "^1.36.1",
+    "@smui-extra/autocomplete": "^7.0.0-beta.14",
+    "@smui/button": "^7.0.0-beta.14",
+    "@smui/card": "^7.0.0-beta.14",
+    "@smui/checkbox": "^7.0.0-beta.14",
+    "@smui/dialog": "^7.0.0-beta.14",
+    "@smui/drawer": "^7.0.0-beta.14",
+    "@smui/form-field": "^7.0.0-beta.14",
+    "@smui/icon-button": "^7.0.0-beta.14",
+    "@smui/list": "^7.0.0-beta.14",
+    "@smui/switch": "^7.0.0-beta.14",
+    "@smui/textfield": "^7.0.0-beta.14",
+    "@smui/top-app-bar": "^7.0.0-beta.14",
     "@sveltejs/adapter-auto": "^1.0.3",
     "@sveltejs/kit": "^1.22.3",
     "@types/bcrypt": "^5.0.0",
@@ -27,6 +42,7 @@
     "prettier-plugin-svelte": "^2.10.1",
     "prisma": "^5.0.0",
     "sass": "^1.63.6",
+    "smui-theme": "^7.0.0-beta.14",
     "svelte": "^3.59.2",
     "svelte-check": "^3.4.6",
     "ts-node": "^10.9.1",
